# l1nkZip

./: .gitignore  .releaserc.json  404.html  CHANGELOG.md  CNAME  Dockerfile  LICENSE  Makefile  README.md  index.html  monitoring-blueprint.md  pyproject.toml  pytest.ini  requirements.txt  search.html  update-version.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 5-1-servidor-mcp-sse-y-rutas-de-conexion-en-fastapi-getpost.md  5-2-exposicion-de-herramientas-publicas-de-gestion-shorten-y-get_url.md  5-3-herramientas-mcp-administrativas-y-seguridad-por-token.md  deferred-work.md  spec-docs-mcp-feature-documentation.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: antigravity.yaml  claude-code.yaml  opencode.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
install/: index.html
l1nkzip/: cache.py  config.py  generator.py  logging.py  main.py  mcp.py  metrics.py  models.py  phishtank.py  version.py
l1nkzip/templates/: 404.html
mcp/: index.html
search/: search_index.json
selfhosting/: index.html
tests/: conftest.py  test_caching.py  test_metrics.py  test_rate_limiting.py
tests/api/: test_admin.py  test_health.py  test_mcp.py  test_mcp_tools.py  test_redirect.py  test_shorten.py
tests/integration/: test_caching_integration.py  test_creation_flow.py  test_redirect_flow.py
tests/unit/: test_caching.py  test_generator.py  test_metrics.py  test_phishtank.py  test_rate_limiting.py  test_validation.py
user-guide/: Makefile  README.md  mkdocs.yml  requirements.txt
user-guide/docs/: index.md  install.md  mcp.md  selfhosting.md
