[project]
name = "l1nkzip"
version = "0.4.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "mypy==1.17.1",
    "pony==0.7.19",
    "prometheus-client==0.21.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings==2.4.0",
    "pytest==8.4.1",
    "pytest-asyncio==0.25.1",
    "redis==5.0.1",
    "ruff==0.12.7",
    "slowapi==0.1.9",
    "uvicorn==0.35.0",
    "validators==0.34.0",
]
