[project]
name = "l1nkzip"
version = "0.5.10"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "pony==0.7.19",
    "prometheus-client==0.25.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings==2.4.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "redis==7.4.0",
    "ruff==0.15.12",
    "slowapi==0.1.9",
    "ty>=0.0.1a19",
    "uvicorn==0.44.0",
    "validators==0.35.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
  ".git",
  ".venv",
  "venv",
  ".ruff_cache",
  ".pytest_cache",
  "alembic/versions",
  ".agent",
  ".claude",
  ".opencode",
  "_bmad",
]

[tool.ruff.lint]
# Enable focused, widely-accepted rule sets:
# F: pyflakes, E/W: pycodestyle, I: isort, N: naming, B: bugbear
select = ["F", "E", "W", "I", "N", "B"]
ignore = []

# Treat warnings as issues we want to fix eventually, but keep this set stable and conservative.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pep8-naming]
# Allow these mixedCase names as they are column names.
ignore-names = ["qualification_AI_tools", "qualification_AI_tools_asked"]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["l1nkzip", "tests"]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
order-by-type = true
case-sensitive = false

[tool.ty.environment]
python = "./.venv"

[tool.ty.src]
include = ["./l1nkzip", "./tests", "./user-guide"]
exclude = ["./alembic"]

[tool.ty.rules]
index-out-of-bounds = "ignore"
